--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -229,20 +229,29 @@
                     <img class="img-responsive" src="{{ org_img }}">
                 </div>
             </div>
+            {% if user_key %}
             <form action="./twitter" method="post" class="add-margin-top">
                 <div class="form-group col-xs-12">
                     <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
                 </div>
-                <input type="hidden" name="original_img_src" value="{{ org_img }}">
-                <input type="hidden" name="result_img_src" value="{{ result }}">
-                <input type="hidden" name="user_key" value="{{ user_key }}">
-                <input type="hidden" name="user_secret_key" value="{{ user_secret_key }}">
+                <input type="hidden" id = "original_img_src" name="original_img_src" value="{{ org_img }}">
+                <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ result }}">
+                <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
+                <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
                 <div class="form-group col-xs-12">
                     <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
                         <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 分享結果到推特
                     </button>
                 </div>
             </form>
+            {% else %}
+            <form action="./twitter" method="post" class="add-margin-top">
+                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 可以按此登陸推特轉發圖片
+                    </button>
+                </div>
+            </form>
+            {% endif %}
         </div>
         {% elif vid_result %}
         <div class="col-md-8 add-margin-top">
@@ -327,7 +336,7 @@
     window.addEventListener('load', init, false);
 </script>
 <script src="static/js/file_load_helper_tchinese.js"></script>
-<script src="static/js/pixel_set_2.js"></script>
+<script src="static/js/pixel_set.js"></script>
 <!-- QR code -->
 <script src="static/js/qr_code_enable.js"></script>
 <!-- google translate -->
