--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -107,8 +107,8 @@
                     {% endif %}
                     <input type="hidden" name="last_image" id="last_image" value="{{last_image}}">
                     <input type="hidden" name="language" value="{{language}}">
-                    <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
-                    <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
+                    <input type="hidden" id = "user_key2" name="user_key2" value="{{ user_key }}">
+                    <input type="hidden" id = "user_secret_key2" name="user_secret_key2" value="{{ user_secret_key }}">
                 </div>
                 <div class="form-group col-xs-6">
                     <label class="control-label" for="k" aria-label="顏色數量會決定轉換圖片的風格偏向多少bits" data-balloon-pos="up" data-balloon-length="medium">色數(幾bit)</label>
