--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -231,7 +231,7 @@
                     <img class="img-responsive" src="{{ org_img }}">
                 </div>
             </div>
-            {% if user_key %}
+            <!-- {% if user_key %}
             <form action="./twitter" method="post" class="add-margin-top">
                 <div class="form-group col-xs-12">
                     <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
@@ -253,7 +253,7 @@
                     </button>
                 </div>
             </form>
-            {% endif %}
+            {% endif %} -->
         </div>
         {% elif vid_result %}
         <div class="col-md-8 add-margin-top">
