--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -107,6 +107,8 @@
                     {% endif %}
                     <input type="hidden" name="last_image" id="last_image" value="{{last_image}}">
                     <input type="hidden" name="language" value="{{language}}">
+                    <input type="hidden" id = "user_key2" name="user_key2" value="{{ user_key }}">
+                    <input type="hidden" id = "user_secret_key2" name="user_secret_key2" value="{{ user_secret_key }}">
                 </div>
                 <div class="form-group col-xs-6">
                     <label class="control-label" for="k" aria-label="顏色數量會決定轉換圖片的風格偏向多少bits" data-balloon-pos="up" data-balloon-length="medium">色數(幾bit)</label>
@@ -229,7 +231,7 @@
                     <img class="img-responsive" src="{{ org_img }}">
                 </div>
             </div>
-            <!-- {% if user_key %}
+            {% if user_key %}
             <form action="./twitter" method="post" class="add-margin-top">
                 <div class="form-group col-xs-12">
                     <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
@@ -251,7 +253,7 @@
                     </button>
                 </div>
             </form>
-            {% endif %} -->
+            {% endif %}
         </div>
         {% elif vid_result %}
         <div class="col-md-8 add-margin-top">
