--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -107,6 +107,8 @@
                     {% endif %}
                     <input type="hidden" name="last_image" value="{{last_image}}">
                     <input type="hidden" name="language" value="{{language}}">
+                    <input type="hidden" id = "user_key2" name="user_key2" value="{{ user_key }}">
+                    <input type="hidden" id = "user_secret_key2" name="user_secret_key2" value="{{ user_secret_key }}">
                 </div>
                 <div class="form-group col-xs-6">
                     <label class="control-label" for="k" aria-label="Color number means how many bits pixel style you want to transform" data-balloon-pos="up" data-balloon-length="medium">Color number(bits)</label>
@@ -229,6 +231,29 @@
                     <img class="img-responsive" src="{{ org_img }}">
                 </div>
             </div>
+            {% if user_key %}
+            <form action="./twitter" method="post" class="add-margin-top">
+                <div class="form-group col-xs-12">
+                    <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
+                </div>
+                <input type="hidden" id = "original_img_src" name="original_img_src" value="{{ org_img }}">
+                <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ result }}">
+                <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
+                <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
+                <div class="form-group col-xs-12">
+                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 分享結果到推特
+                    </button>
+                </div>
+            </form>
+            {% else %}
+            <form action="./twitter" method="post" class="add-margin-top">
+                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 可以按此登陸推特轉發圖片
+                    </button>
+                </div>
+            </form>
+            {% endif %}
         </div>
         {% elif vid_result %}
         <div class="col-md-8 add-margin-top">
@@ -255,6 +280,29 @@
                     <video src="{{ org_img }}" controls="controls"></video>
                 </div>
             </div>
+            {% if user_key %}
+            <form action="./twitter" method="post" class="add-margin-top">
+                <div class="form-group col-xs-12">
+                    <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
+                </div>
+                <input type="hidden" id = "original_img_src" name="original_img_src" value="{{ org_img }}">
+                <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ result }}">
+                <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
+                <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
+                <div class="form-group col-xs-12">
+                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 分享結果到推特
+                    </button>
+                </div>
+            </form>
+            {% else %}
+            <form action="./twitter" method="post" class="add-margin-top">
+                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 可以按此登陸推特轉發圖片
+                    </button>
+                </div>
+            </form>
+            {% endif %}
         </div>
         {% else %}
         <div class="col-md-6">
