--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -241,14 +241,14 @@
                 <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
                 <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
                 <div class="form-group col-xs-12">
-                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                    <button type="submit" id="twitter_submit" class="btn btn-dark btn-block">
                         <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 分享結果到推特
                     </button>
                 </div>
             </form>
             {% else %}
             <form action="./twitter" method="post" class="add-margin-top">
-                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                    <button type="submit" id="twitter_submit" class="btn btn-dark btn-block">
                         <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 可以按此登陸推特轉發圖片
                     </button>
                 </div>
@@ -290,14 +290,14 @@
                 <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
                 <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
                 <div class="form-group col-xs-12">
-                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                    <button type="submit" id="twitter_submit" class="btn btn-dark btn-block">
                         <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 分享結果到推特
                     </button>
                 </div>
             </form>
             {% else %}
             <form action="./twitter" method="post" class="add-margin-top">
-                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
+                    <button type="submit" id="twitter_submit" class="btn btn-dark btn-block">
                         <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 可以按此登陸推特轉發圖片
                     </button>
                 </div>
