--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -234,22 +234,22 @@
             {% if user_key %}
             <form action="./twitter" method="post" class="add-margin-top">
                 <div class="form-group col-xs-12">
-                    <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
+                    <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="Text in this box will attach to the tweet content."></textarea>
                 </div>
                 <input type="hidden" id = "original_img_src" name="original_img_src" value="{{ org_img }}">
                 <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ result }}">
                 <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
                 <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
                 <div class="form-group col-xs-12">
-                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
-                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 分享結果到推特
+                    <button type="submit" id="twitter_submit" class="btn btn-dark btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Share result to twitter
                     </button>
                 </div>
             </form>
             {% else %}
             <form action="./twitter" method="post" class="add-margin-top">
-                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
-                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 可以按此登陸推特轉發圖片
+                    <button type="submit" id="twitter_submit" class="btn btn-dark btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Press to login twitter to autotweet
                     </button>
                 </div>
             </form>
@@ -283,22 +283,22 @@
             {% if user_key %}
             <form action="./twitter" method="post" class="add-margin-top">
                 <div class="form-group col-xs-12">
-                    <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
+                    <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="Text in this box will attach to the tweet content."></textarea>
                 </div>
                 <input type="hidden" id = "original_img_src" name="original_img_src" value="{{ org_img }}">
                 <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ result }}">
                 <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
                 <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
                 <div class="form-group col-xs-12">
-                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
-                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 分享結果到推特
+                    <button type="submit" id="twitter_submit" class="btn btn-dark btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Share result to twitter
                     </button>
                 </div>
             </form>
             {% else %}
             <form action="./twitter" method="post" class="add-margin-top">
-                    <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
-                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 可以按此登陸推特轉發圖片
+                    <button type="submit" id="twitter_submit" class="btn btn-dark btn-block">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Press to login twitter to autotweet
                     </button>
                 </div>
             </form>
