--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -286,7 +286,7 @@
                     <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
                 </div>
                 <input type="hidden" id = "original_img_src" name="original_img_src" value="{{ org_img }}">
-                <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ result }}">
+                <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ vid_result }}">
                 <input type="hidden" id = "user_key" name="user_key" value="{{ user_key }}">
                 <input type="hidden" id = "user_secret_key" name="user_secret_key" value="{{ user_secret_key }}">
                 <div class="form-group col-xs-12">
