--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -248,7 +248,7 @@
                     <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Press to login twitter to autotweet
                 </button>
                 {% endif %}
-                <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ vid_result }}">
+                <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ result }}">
                 <input type="hidden" id = "original_img_src" name="original_img_src" value="{{ org_img }}">
             </form>
         </div>
