--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -277,7 +277,7 @@
                     <video src="{{ org_img }}" controls="controls"></video>
                 </div>
             </div>
-            <form action="./twitter" method="post" class="add-margin-top">
+            <!-- <form action="./twitter" method="post" class="add-margin-top">
                 {% if user_key %}
                 <div class="form-group col-xs-12">
                     <textarea class="form-control" name="tweet_content" id="tweet_content" placeholder="這裡的字將附於推特的內文"></textarea>
@@ -296,7 +296,7 @@
                 {% endif %}
                 <input type="hidden" id = "result_img_src" name="result_img_src" value="{{ vid_result }}">
                 <input type="hidden" id = "original_img_src" name="original_img_src" value="{{ org_img }}">
-            </form>
+            </form> -->
         </div>
         {% else %}
         <div class="col-md-6">
