--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -53,6 +53,8 @@
                 <h4 class="modal-title" id="modal-label">Instruction</h4>
             </div>
             <div class="modal-body">
+                <h4>Introduction Video</h4>
+                <iframe style="width: auto;" src="https://www.youtube.com/embed/cJNWTVEHWV8" title="線上像素濾鏡工具：世界第一個線上圖片、影片、GIF像素濾鏡" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>
                     To make image pixel art style → make color together to look like pixel<br>
                     If you don't want too many noise you can use smooth<br>
