--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -53,6 +53,8 @@
                 <h4 class="modal-title" id="modal-label">説明</h4>
             </div>
             <div class="modal-body">
+                <h4>介紹影片</h4>
+                <iframe style="width: auto;" src="https://www.youtube.com/embed/cJNWTVEHWV8" title="線上像素濾鏡工具：世界第一個線上圖片、影片、GIF像素濾鏡" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>
                     對圖像進行馬賽克化 → 將顏色聚類，使其看起來像一個點圖。 <br>
                     如果您擔心不連續的輪廓或噪聲點，最好平滑它們。 <br>
