--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Can turn Image into Pixel Art style">
+    <meta property="og:image" content="static/sample/preview.png"/>
     <title>Pixel-Art-Filter-Web</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
