--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="可以把圖片變成像素風格">
+    <meta property="og:image" content="static/sample/preview.png"/>
     <title>像素濾鏡工具</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
