--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -2,11 +2,19 @@
 <html lang="ja">
 <head>
     <link rel="shortcut icon" href="static/icon/favicon_pixel.ico" type="image/x-icon" />
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Can turn Image into Pixel Art style">
+
+    <!-- meta og property -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pixel.jingshing.com/">
+    <meta property="og:title" content="Pixel-Art-Filter-Web">
+    <meta property="og:description" content="A online pixel art filter">
     <meta property="og:image" content="static/sample/preview.png"/>
+
     <title>Pixel-Art-Filter-Web</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
