--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -2,11 +2,19 @@
 <html lang="ja">
 <head>
     <link rel="shortcut icon" href="static/icon/favicon_pixel.ico" type="image/x-icon" />
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="可以把圖片變成像素風格">
+
+    <!-- meta og property -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pixel.jingshing.com/">
+    <meta property="og:title" content="像素濾鏡工具">
+    <meta property="og:description" content="一個線上的像素濾鏡工具">
     <meta property="og:image" content="static/sample/preview.png"/>
+    
     <title>像素濾鏡工具</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
