--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -15,6 +15,11 @@
     <meta property="og:description" content="A online pixel art filter">
     <meta property="og:image" content="static/sample/preview.png"/>
 
+    <!-- twitter card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@shing_jing" />
+    <meta name="twitter:creator" content="@shing_jing" />
+
     <title>Pixel-Art-Filter-Web</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
