--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -14,6 +14,11 @@
     <meta property="og:title" content="像素濾鏡工具">
     <meta property="og:description" content="一個線上的像素濾鏡工具">
     <meta property="og:image" content="static/sample/preview.png"/>
+
+    <!-- twitter card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@shing_jing" />
+    <meta name="twitter:creator" content="@shing_jing" />
     
     <title>像素濾鏡工具</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
