--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -323,6 +323,7 @@
                 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
             </script>
             <br>
+            <a href="https://youtu.be/cJNWTVEHWV8" data-chrome="nofooter noborders" target="_blank">#Click here to see Introduction video</a>
             <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" data-chrome="nofooter noborders" target="_blank">#If you want to use it without file size restriction you can use local edition</a>
         </div>
         {% endif %}
