--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -323,6 +323,7 @@
                 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
             </script>
             <br>
+            <a href="https://youtu.be/cJNWTVEHWV8" data-chrome="nofooter noborders" target="_blank">#可以點擊這裡看介紹影片</a>
             <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" data-chrome="nofooter noborders" target="_blank">#如果不想有大小限制，可以試試本地版：像素風濾鏡工具軟體</a>
         </div>
         {% endif %}
