--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -111,7 +111,7 @@
                         <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Open File
                     </a>
                     <span id="file_info" class="help-block">Image, GIF or mp4(maxinum:2MB)<a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">Click here to get the local version to get rid of file size restriction</a></span>
-                    <input type="file" name="image" id="file_input" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi' style="display:none;">
+                    <input type="file" name="image" id="file_input" accept='image/png,image/jpeg,image/gif, image/webp, video/mp4, video/avi' style="display:none;">
                     {% if last_image %}
                     <div class="preview">
                         <p>{{last_image}}</p>
