--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -111,7 +111,7 @@
                         <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> 開啟檔案
                     </a>
                     <span id="file_info" class="help-block">圖像、GIF或影片(最大2MB)<a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">點擊取得沒有大小限制的本地版</a></span>
-                    <input type="file" name="image" id="file_input" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi' style="display:none;">
+                    <input type="file" name="image" id="file_input" accept='image/png,image/jpeg,image/gif, image/webp, video/mp4, video/avi' style="display:none;">
                     {% if last_image %}
                     <div class="preview">
                         <p>{{last_image}}</p>
