--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -53,6 +53,7 @@
                 <li><a href="https://jingshing.com/" target="_blank">SITE</a></li>
                 <li><a href="{{url_for('traditional_chinese')}}">繁體中文</a></li>
                 <li><a id="other_lang"><span id="other_lang_s">Other Language</span><div id='google_translate_element' hidden></div></a></li>
+                <li><a href="{{url_for('gallery')}}">Gallery</a></li>
             </ul>
         </div>
     </div>
