--- a/script/templates/gallery.html
+++ b/script/templates/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <link rel="shortcut icon" href="static/icon/favicon_pixel.ico" type="image/x-icon" />
     
@@ -57,11 +57,11 @@
         <div class="row">
             <div class="col-md-6">
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Down Bridge <a href="https://twitter.com/hashtag/PixelArtFilterWeb?src=hash&amp;ref_src=twsrc%5Etfw">#PixelArtFilterWeb</a> <a href="https://t.co/b8Rz6bWaY8">pic.twitter.com/b8Rz6bWaY8</a></p>&mdash; JingShing (@shing_jing) <a href="https://twitter.com/shing_jing/status/1597482273825509377?ref_src=twsrc%5Etfw">November 29, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <blockquote class="twitter-tweet"><p lang="und" dir="ltr">NNNNNNNNNN <a href="https://twitter.com/hashtag/PixelArtFilterWeb?src=hash&amp;ref_src=twsrc%5Etfw">#PixelArtFilterWeb</a> <a href="https://t.co/UcNGwCtTPf">pic.twitter.com/UcNGwCtTPf</a></p>&mdash; JingShing (@shing_jing) <a href="https://twitter.com/shing_jing/status/1597210758374633474?ref_src=twsrc%5Etfw">November 28, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">NNNNNNNNNN <a href="https://twitter.com/hashtag/PixelArtFilterWeb?src=hash&amp;ref_src=twsrc%5Etfw">#PixelArtFilterWeb</a> <a href="https://t.co/UcNGwCtTPf">pic.twitter.com/UcNGwCtTPf</a></p>&mdash; JingShing (@shing_jing) <a href="https://twitter.com/shing_jing/status/1597210758374633474?ref_src=twsrc%5Etfw">November 28, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <div class="col-md-6">
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Second Post on Twitter using : <a href="https://t.co/fQXta51Rkw">https://t.co/fQXta51Rkw</a> <a href="https://twitter.com/hashtag/PixelArtFilterWeb?src=hash&amp;ref_src=twsrc%5Etfw">#PixelArtFilterWeb</a> <a href="https://t.co/9egbO9fDiN">pic.twitter.com/9egbO9fDiN</a></p>&mdash; JingShing (@shing_jing) <a href="https://twitter.com/shing_jing/status/1596409334832844801?ref_src=twsrc%5Etfw">November 26, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <blockquote class="twitter-tweet"><p lang="es" dir="ltr">medieval plague doctor <a href="https://twitter.com/hashtag/PixelArtFilterWeb?src=hash&amp;ref_src=twsrc%5Etfw">#PixelArtFilterWeb</a> <a href="https://t.co/ZY8wozlAES">pic.twitter.com/ZY8wozlAES</a></p>&mdash; JingShing (@shing_jing) <a href="https://twitter.com/shing_jing/status/1596459869561061376?ref_src=twsrc%5Etfw">November 26, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">medieval plague doctor <a href="https://twitter.com/hashtag/PixelArtFilterWeb?src=hash&amp;ref_src=twsrc%5Etfw">#PixelArtFilterWeb</a> <a href="https://t.co/ZY8wozlAES">pic.twitter.com/ZY8wozlAES</a></p>&mdash; JingShing (@shing_jing) <a href="https://twitter.com/shing_jing/status/1596459869561061376?ref_src=twsrc%5Etfw">November 26, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </div>
