--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="zh">
 <head>
     <link rel="shortcut icon" href="static/icon/favicon_pixel.ico" type="image/x-icon" />
     
