--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -220,6 +220,9 @@
                     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
                 </script>
                 <p>只是一個按鈕</p>
+                <a id="clear_data" class="btn btn-dark" aria-label="清除本地的配置資料和推特的存取" data-balloon-pos="up" data-balloon-length="medium">
+                    <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> 清除本地緩存
+                </a>
             </div>
         </div>
         </div>
@@ -366,8 +369,13 @@
         document.getElementsByName("language")[0].value = 'tch';
         localStorage.setItem('language', 'traditional_chinese');
     }
+    function clear_localstorage(){
+        localStorage.clear();
+        location.reload();
+    }
     function init(){
         document.body.addEventListener('click',set_language, false);
+        document.getElementById('clear_data').addEventListener('click',clear_localstorage, false);
         load_language();
         set_last_image_name();
     }
